--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
-  "name": "lz_js",
+  "name": "js",
   "version": "1.0.0",
-  "description": "JS ",
-  "main": "index.php",
+  "description": "js",
+  "main": "main.js",
   "directories": {
     "doc": "docs"
   },
-  "dependencies": {
-    "flow-bin": "^0.87.0",
-    "babel-cli": "^6.26.0",
-    "babel-preset-flow": "^6.23.0"
-  },
-  "devDependencies": {},
   "scripts": {
-    "build": "babel",
     "test": "test",
-    "flow": "flow"
+    "build": "babel src/ -d build/",
+    "flow": "flow",
+    "babel": "babel --presets es2015 src -o build/main.bundle.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/airme1019/js.git"
   },
   "keywords": [
-    "JS"
+    "js"
   ],
-  "author": "LingZ",
+  "author": "lingz",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/airme1019/js/issues"
   },
-  "homepage": "https://github.com/airme1019/js#readme"
+  "homepage": "https://github.com/airme1019/js#readme",
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-flow": "^6.23.0",
+    "flow-bin": "^0.87.0"
+  }
 }
